[package]
authors = [
    "Jonathan Reem <jonathan.reem@gmail.com>",
    "Zach Pomerantz <zmp@umich.edu>",
    "Michael Sproul <micsproul@gmail.com>",
    "Patrick Tran <patrick.tran06@gmail.com>",
]
description = "Extensible, Concurrency Focused Web Development in Rust."
documentation = "http://ironframework.io/doc/iron/"
license = "MIT"
name = "iron"
readme = "README.md"
repository = "https://github.com/iron/iron"
version = "0.6.0"

[dependencies]
http = "0.1.5"
log = "0.3"
mime = "0.3.5"
mime_guess = "2.0.0-alpha.4"
modifier = "0.1"
num_cpus = "1.0"
plugin = "0.2"
typemap = "0.3"
url = "1.1"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper.git"

[dependencies.hyper-native-tls]
optional = true
version = "0.2"

[dev-dependencies]
mime = "0.2"
time = "0.1"

[features]
default = []
native-tls-example = ["hyper-native-tls"]

[lib]
name = "iron"
path = "src/lib.rs"
